Fjern gammel Altinn-klient